MODPATBLK-206 fix code smell